fix(react): add missing header z-index

--- a/projects/react/src/UI/Header/Header.scss
+++ b/projects/react/src/UI/Header/Header.scss
@@ -7,6 +7,7 @@
   position: sticky;
   right: 0;
   top: 0;
+  z-index: 2;
 
   &__item {
     &:not( :last-child ) {
